handle multi language

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,7 +30,7 @@
     <string name="name_popular">Popular Movies</string>
     <string name="toast_movie_not_exist">Movie not exist! Please try another movie.</string>
     <string name="hint_search">Enter movie name</string>
-    <string name="text_read_all_review">Read all review</string>
     <string name="title_recommend">Recommend</string>
     <string name="title_review">Review</string>
+    <string name="title_cast_detail">CastDetail</string>
 </resources>
