--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -13,6 +13,7 @@
     <string name="category_upcoming">Sắp ra mắt</string>
     <string name="text_genres">Thể loại</string>
     <string name="title_cast">Diễn viên</string>
+    <string name="title_company">Công ty</string>
     <string name="text_movies">Danh sách phim diễn viên tham gia</string>
     <string name="text_biography">Tiểu sử</string>
     <string name="text_release_date">Ngày phát hành</string>
