--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,4 +34,8 @@
     <string name="title_recommend">Recommend</string>
     <string name="title_review">Review</string>
     <string name="title_cast_detail">CastDetail</string>
+    <string name="toast_no_internet">No internet</string>
+    <string name="toast_error_api">Sorry, API was error. Please try again later!</string>
+    <string name="error_no_internet">Unable to resolve host \"api.themoviedb.org\": No address associated with hostname</string>
+    <string name="text_vote_average">Vote average</string>
 </resources>
